--- a/css/style.css
+++ b/css/style.css
@@ -79,7 +79,15 @@ body {
   font-weight: 700;
   font-size: 20px;
   line-height: 23px;
-  letter-spacing: -0.25px;
+  letter-spacing: -0.23px;
+}
+
+@media (min-width: 665px) {
+  .header__title {
+    font-size: 24px;
+    line-height: 28px;
+    letter-spacing: -0.3px;
+  }
 }
 
 .header__guaranty {
@@ -88,16 +96,29 @@ body {
   font-weight: 700;
   font-size: 15px;
   line-height: 20px;
-  letter-spacing: -0.1875px;
+  letter-spacing: -0.2px;
   color: #c0df33;
+}
+
+@media (min-width: 665px) {
+  .header__guaranty {
+    font-size: 18px;
+    line-height: 21px;
+  }
 }
 
 .header__text {
   margin: 0;
   font-size: 14px;
   line-height: 26px;
-  letter-spacing: -0.175px;
+  letter-spacing: -0.2px;
   color: #9aa7be;
+}
+
+@media (min-width: 665px) {
+  .header__text {
+    font-size: 16px;
+  }
 }
 
 .price-component__column {
@@ -117,7 +138,7 @@ body {
   font-weight: 700;
   font-size: 18px;
   line-height: 21px;
-  letter-spacing: -0.225px;
+  letter-spacing: -0.2px;
 }
 
 .price {
@@ -140,7 +161,7 @@ body {
   letter-spacing: -0.4px;
 }
 
-.price__cost--period {
+.price__cost-period {
   font-size: 16px;
   line-height: 26px;
   letter-spacing: -0.2px;
@@ -162,7 +183,7 @@ body {
   width: 263px;
   height: 48px;
   margin: 0 auto;
-  color: inherit;
+  color: #ffffff;
   background: #c0df33;
   box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
@@ -175,7 +196,7 @@ body {
 }
 
 .price-component__login-link:hover {
-  background-color: #9FBF0B;
+  background-color: #9fbf0b;
 }
 
 .price-component__login-link:active {
